<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NucleotideFreCalculator"
    android:background="@drawable/use"
    >

    <ImageView
        android:id="@+id/button_HammingDistanceAboutIT5"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/i_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:onClick="AboutNF"/>

    <TextView
        android:id="@+id/textView12"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_margin="10dp"
        android:fontFamily="@font/spacequestitalic_60x"
        android:gravity="center"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="4"
        android:text="@string/heading"
        android:textColor="#F4133F"
        android:textSize="60sp"

        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:id="@+id/text_input_sequence"-->
<!--        android:layout_width="600dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_alignParentTop="true"-->
<!--        android:layout_marginTop="280dp"-->



<!--        >-->
<!--        <com.google.android.material.textfield.TextInputEditText-->
<!--            android:layout_width="350dp"-->
<!--            android:layout_gravity="center"-->
<!--            android:layout_height="200dp"-->
<!--            android:gravity="top"-->
<!--            android:textColorHint="@color/purple_200"-->
<!--            android:inputType="textMultiLine"/>-->
<!--    </com.google.android.material.textfield.TextInputLayout>-->

    <Button
        android:id="@+id/button7"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#A912C3"
        android:clickable="false"
        android:fontFamily="@font/spacequestitalic_g8j"
        android:padding="2dp"
        android:text="@string/calc_nf"
        android:textSize="27dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center"
        android:text="@string/paste_the_sequence"

        android:textColor="#FFEE36"


        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <EditText
        android:id="@+id/input_nf"
        android:layout_width="340dp"
        android:layout_height="200dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        android:gravity="top"
        android:hint="Paste Here"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <Button
        android:id="@+id/button_UploadSeq_Nfreq"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-black"
        android:padding="2dp"
        android:text="@string/upload_a_txt_file"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_nf" />

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@android:color/holo_green_dark"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="sans-serif-black"
        android:padding="10dp"
        android:text="@string/submit"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>