<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/convert"
    tools:context=".HammingCalculator">

    <ImageView
        android:id="@+id/Button_HammingDistanceAboutIT"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="AboutHammingDistance"
        android:src="@drawable/i_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/EditText_Sequence1Input_Hamming"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"

        android:layout_marginTop="20dp"


        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center"
        android:text="PASTE THE SEQUENCE2 BELOW"
        android:textColor="#FFEE36"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditText_Sequence2Input_Hamming" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="50dp"

        android:fontFamily="sans-serif-smallcaps"


        android:gravity="center"
        android:text="PASTE THE SEQUENCE1 BELOW"
        android:textColor="#FFEE36"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <EditText
        android:id="@+id/EditText_Sequence1Input_Hamming"
        android:layout_width="340dp"
        android:layout_height="100dp"
        android:layout_below="@+id/textView4"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:gravity="top"
        android:hint="Paste Here"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText
        android:id="@+id/EditText_Sequence2Input_Hamming"
        android:layout_width="340dp"
        android:layout_height="100dp"
        android:layout_below="@+id/textView6"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:gravity="top"
        android:hint="Paste Here"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />


    <TextView
        android:id="@+id/textView11"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_margin="10dp"
        android:fontFamily="@font/spacequestitalic_60x"
        android:gravity="center"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="4"
        android:text="@string/heading"
        android:textColor="#F4133F"
        android:textSize="60sp"

        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button6"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#F8910A"
        android:clickable="false"
        android:fontFamily="@font/spacequestitalic_g8j"
        android:padding="2dp"
        android:text="@string/calculate_hamming_distance"
        android:textSize="27dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <Button
        android:id="@+id/button_submit_hamming_result"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@android:color/holo_green_dark"
        android:fontFamily="sans-serif-black"
        android:padding="10dp"
        android:text="@string/submit"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>